<resources>
    <string name="app_name">Question</string>
    <string name="intro">This is a short quiz about eating habits.</string>
    <string name="firstQuestion">1.What gender are You?</string>
    <string name="secondQuestion">2.How many times a week do You eat vegetables like: cauliflower, green beans, broccoli, zucchini etc?</string>
    <string name="thirdQuestion">3.Which of the protein foods listed below You choose the most often?</string>
    <string name="lastQuestion">4.What type of bread do You usually eat?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="never">Never</string>
    <string name="lessThan">Less than once a week</string>
    <string name="once">Once a week</string>
    <string name="more">More than once a week</string>
    <string name="peanut">Peanut butter, Nutella, etc.</string>
    <string name="eggs">Eggs e.g.boiled, scrambled</string>
    <string name="soya">Soyabeans, tofu</string>
    <string name="other">Other beans, lentils, e.g.chickpeas, split peas</string>
    <string name="lightBread">Light bread</string>
    <string name="darkBread">Dark bread</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
</resources>
