<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:src="@drawable/question"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:text="@string/intro"
            style="@style/QuestionStyle"
            android:textAllCaps="true"/>
        <TextView
            android:text="@string/firstQuestion"
            style="@style/QuestionStyle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:onClick="female"
            android:text="@string/female"
            android:layout_margin="15dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:onClick="male"
            android:text="@string/male"
            android:layout_margin="15dp"/>
    </LinearLayout>
    <TextView
        android:text="@string/secondQuestion"
        style="@style/QuestionStyle"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:onClick="never"
        android:text="@string/never"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:onClick="lessThan"
        android:text="@string/lessThan"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:onClick="once"
        android:text="@string/once"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:onClick="more"
        android:text="@string/more"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBotto="10dp"/>
    <TextView
        android:text="@string/thirdQuestion"
        style="@style/QuestionStyle"/>
    <CheckBox
        android:id="@+id/peanut"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/peanut"
        android:textSize="18sp"/>
    <CheckBox
        android:id="@+id/eggs"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/eggs"
        android:textSize="18sp"/>
    <CheckBox
        android:id="@+id/soya"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/soya"
        android:textSize="18sp"/>
    <CheckBox
        android:id="@+id/other"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/other"
        android:textSize="18sp"/>
    <TextView
        android:text="@string/lastQuestion"
        style="@style/QuestionStyle"/>
    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submit"
        android:text="@string/submit"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_horizontal"/>
     </LinearLayout>
</ScrollView>
